# tauri-system-monitor

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js  stress.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
